--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="assets/icons/meteocons/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+        <script type="application/json" src="../node_modules/auth0-js/build/auth0.js"></script>
 
-        <!-- FUSE Splash Screen CSS -->
+      <!-- FUSE Splash Screen CSS -->
         <style type="text/css">
             #fuse-splash-screen {
                 display: block;
